--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,12 @@ body {
     height: 200px;
 }
 
+.container{
+    max-width: 800px;
+    margin: 0 auto;
+    color: #6b3e3e;
+    font-family: sans-serif;
+    padding-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
